[gd_scene load_steps=4 format=3 uid="uid://dra6je55bsveu"]

[ext_resource type="Script" uid="uid://cl38uc64n2s74" path="res://Entities/Slots/slot_1.gd" id="1_7twif"]
[ext_resource type="Texture2D" uid="uid://i4ht01btn6y6" path="res://textures/tiles/chessTile2.png" id="2_wgll3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4c3kn"]
size = Vector2(168, 159)

[node name="Area2D" type="Area2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_7twif")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.811765, 0, 1, 1)
texture_filter = 1
position = Vector2(80, 80)
scale = Vector2(10, 10)
texture = ExtResource("2_wgll3")

[node name="Slot_Collision" type="CollisionShape2D" parent="."]
visibility_layer = 2
position = Vector2(80, 80)
scale = Vector2(1.6, 1.6)
shape = SubResource("RectangleShape2D_4c3kn")
debug_color = Color(0, 0.6, 0.701961, 0)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
